# gstreamer_learning

./: CMakeLists.txt
src/: basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-4.c  basic-tutorial-5.c
